# eblocks_code

./: README.md
eblock_frontend/: README.md  tsconfig.json  tsconfig.spec.json
eblock_frontend/src/: index.html
eblock_frontend/src/app/: app.component.css  app.component.html
eblock_frontend/src/app/contact-table/: contact-table.component.ts
eblock_frontend/src/app/services/: api.service.ts
eblocks_backend/: .env_example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
eblocks_backend/app/: alembic.ini  api.py  crud.py  database.py  exceptions.py  main.py  models.py  requirements.txt  schemas.py
eblocks_backend/app/alembic/: env.py
eblocks_backend/app/alembic/versions/: 2365260c61fc_initial.py  24fcd23d72f6_add_a_column.py  2db2b01c3430_add_a_column.py  4a408ac343fc_initial.py  9cf8f8f77424_create_account_table.py  a951ad3eb944_initial.py  b4c41f18a1da_added_account_table.py  b8ed1d10a7b2_.py  e41e02762c06_initial.py
eblocks_frontend/: README.md  README.txt  angular.json  extra-webpack.config.js  karma.conf.js  package-lock.json  package.json
eblocks_frontend/src/app/: app.component.spec.ts  app.component.ts  app.module.ts
eblocks_frontend/src/app/contact-form/: contact-form.component.css  contact-form.component.html  contact-form.component.ts
eblocks_frontend/src/app/contact-table/: contact-table.component.css  contact-table.component.html
eblocks_frontend/src/app/loading/: loading.component.css  loading.component.html  loading.component.ts
eblocks_frontend/src/app/models/: contact.ts
