[tool.poetry]
name = "app"
version = "0.0.1"
description = "Backend logic implementation for https://github.com/gothinkster/realworld with awesome FastAPI"
authors = ["Nik Sidnev <sidnev.nick@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
anyio="3.6.1"
asgiref="3.5.2"
click="8.1.3"
fastapi="0.78.0"
FastAPI-SQLAlchemy="0.2.1"
fastapi-utils="0.2.1"
greenlet="1.1.2"
h11="0.13.0"
idna="3.3"
pydantic="1.9.1"
PyMySQL="1.0.2"
python-dotenv="0.20.0"
sniffio="1.2.0"
SQLAlchemy="1.4.36"
starlette="0.19.1"
typing-extensions="4.2.0"
uvicorn="0.17.6"


